# study_airflow

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  docker-compose-airflow.yml  docker-compose.yml
airflow/: airflow.cfg
airflow/dags/: __conn.py  depedences_dag.py  one_task_dag.py  parallel_dag.py  two_task_dag.py
airflow/dags/exo_01/: Readme.md  exo_01.py  exo_02.py  step_01.py  step_02.py
airflow/dags/exo_02/: challenge_dag.py
data/: README.md
scripts/: install_airflow.sh  lab_setup.sh  run_airflow.sh  setup-postgres.sh  setup-postgres.sql  stop_airflow.sh
